integration with multiverse